# mangata-node

./: CHANGELOG.md  Cargo.toml
.github/workflows/: release.yml
client/block-builder/src/: lib.rs
client/service/src/client/: client.rs
devops/dockerfiles/validator-node/: Dockerfile
pallets/assets-info/: Cargo.toml
pallets/balances/: Cargo.toml
pallets/balances/src/: lib.rs
pallets/bridge/: Cargo.toml
pallets/crypto-test/: Cargo.toml
pallets/crypto-test/src/: lib.rs
pallets/encrypted-tx/: Cargo.toml
pallets/encrypted-tx/src/: lib.rs
pallets/executive/: Cargo.toml
pallets/executive/src/: lib.rs
pallets/random-seed/src/: lib.rs
pallets/staking/: Cargo.toml
pallets/sudo/: Cargo.toml
pallets/sudo/src/: lib.rs
pallets/xyk/src/: lib.rs
primitives/mangata-traits/: Cargo.toml
primitives/mangata-traits/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: initialize_validator_node.sh
