[package]
name = "crypto-test"
version = "0.1.0"
authors = ['Mangata team']
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }
aes-gcm = {version = "0.9.4", default-features = false, features = ["aes", "heapless"]}
sp-application-crypto = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-session = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
mangata-primitives = { default-features = false, version = '0.1.0' , path = '../../primitives/mangata'}
orml-tokens = {  default-features = false, version = '0.4.0' , git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }

[features]
default = ["std"]
std = [
	"sp-application-crypto/std",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"pallet-session/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]